--- a/.github/workflows/imprimir.yml
+++ b/.github/workflows/imprimir.yml
@@ -19,5 +19,5 @@ jobs:
 
       - name: Run command in the vm
         run: |
-          echo "Hola, estoy dentro de un Action. Pedro"
+          echo "Imorimir tabla de datos"
           ls -lhrt
