--- a/.github/workflows/Imprimir_datos.yml
+++ b/.github/workflows/Imprimir_datos.yml
@@ -22,5 +22,5 @@ jobs:
           echo "tabla desde la fuente"
           cat datos.cvs
           echo "filtrado datos"
-          grep -v hotmail data.c
+          grep -v hotmail data.cvs
           ls -lhrt
